Optimize media queries

--- a/sass/partials/_photobox-media-queries.scss
+++ b/sass/partials/_photobox-media-queries.scss
@@ -1,36 +1,36 @@
 /*------- media queries (for small screens) -----------*/
-@media all and (max-width:700px) {
+@media all and (max-width: $breakpointWidth) {
 	#pbOverlay .wrapper img, #pbOverlay.hide .wrapper img.prepare {
 		max-height: 100%;
 	}
 
-	#pbOverlay.thumbs .wrapper {
-		padding: 0;
-		margin: 0;
+	#pbOverlay {
+		&.thumbs {
+			.wrapper {
+				padding: 0;
+				margin: 0;
+			}
+		}
+		.pbThumbs {
+			margin-bottom: -60px;
+			&.show {
+				margin: 0;
+			}
+
+			ul {
+				height: 50px;
+			}
+			li {
+				height: 100%;
+				opacity: 1;
+				img {
+					min-height: 96.5%;
+				}
+			}
+		}
 	}
 
-	#pbOverlay .pbThumbs {
-		margin-bottom: -60px;
-	}
-
-	#pbOverlay .pbThumbs.show {
-		margin: 0;
-	}
-
-	#pbCaption .pbThumbs ul {
-		height: 50px;
-	}
-
-	#pbCaption .pbThumbs li {
-		height: 100%;
-		opacity: 1;
-	}
-
-	#pbCaption .pbThumbs li img {
-		min-height: 96.5%;
-	}
-
-	/* Helpers */
+/* Helpers */
 	.hidden-phone {
 		display: none;
 	}
@@ -42,7 +42,7 @@
 }
 
 /* fix for Chrome */
-@media all and (max-width:710px) {
+@media all and (max-width: 710px) {
 	#pbCaption .pbThumbs li.active a img {
 		min-height: 96%;
 	}
