Update photobox to 1.8 Update index.html to actually work when debugging, with latest jquery Update demo styles to be browser-compatible for IE7+ Improve browser support using compass mixins Create additional mixin for pointer-events Add variables for caption height, image spacing, button width, and overlay colour Add cross-browser animation support Optimize some layout css using extends

--- a/sass/partials/_photobox-animations.scss
+++ b/sass/partials/_photobox-animations.scss
@@ -2,27 +2,14 @@
 Animations
 ========================================================================== */
 
-@keyframes pbLoaderFrames {
-	50% {
-		height: 5px;
-	}
-}
-
-@-webkit-keyframes pbLoaderFrames {
+@include keyframes("pbLoaderFrames") {
 	50% {
 		height: 5px;
 	}
 }
 
 /* Animation when image was not loaded */
-@keyframes deadImage {
-	50% {
-		text-shadow: 0 0 25px rgba(255, 255, 255, .5);
-		@include scale(0.85);
-	}
-}
-
-@-webkit-keyframes deadImage {
+@include keyframes ("deadImage") {
 	50% {
 		text-shadow: 0 0 25px rgba(255, 255, 255, .5);
 		@include scale(0.85);
