added an button to toggle the thumbnails in full-view mode

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,11 @@ a{ text-decoration:none; }
 		.main small{ color:inherit; }
 	.main h2{ font-size:1.7em; color:#FF1668; line-height:1.2; margin:0; font-family:'Romanesco'; }
 	.main p{ margin:15px 0; }
+	
+	.main ul li{ padding-left:25px; position:relative; margin:0.2em 0; }
+		.main ul li:before{ content:'\26AB'; color:#FFF; position:absolute; left:0; top:-2px; opacity:0.5; transition:0.3s; }
+		.main ul li:hover:before{ opacity:1; text-shadow:0 0 4px #FFF; transition:.1s; }
+		
 		.main footer{ margin-top:50px; text-shadow:none; font-size:0.9em; }
 		.main footer .copy{ font-family:Tahoma; font-size:1.2em; font-weight:bold; margin:0 3px; opacity:0.35; }
 		.main footer a{ margin-left:10px; color:#D8FF16; border-radius:4px; position:relative; -webkit-transition:0.2s; -ms-transition:0.2s; transition:0.2s; }
