smooth scrolling (for IOS devices) of bottom thumbnails area

--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -108,7 +108,7 @@
 #pbOverlay #pbThumbsToggler:checked ~ #pbCaption .pbThumbs{ margin:0; }
 #pbOverlay #pbThumbsToggler:checked ~ .wrapper{ margin-top:-50px; padding:50px 0; }
 
-#pbOverlay .pbThumbs{ display:none; transition:0.35s; }
+#pbOverlay .pbThumbs{ display:none; transition:0.35s; -webkit-overflow-scrolling:touch; }
 #pbOverlay.thumbs .pbThumbs{ display:block; width:100%; padding:5px 0 2px; margin-bottom:-100px; overflow:hidden; }
 #pbCaption .pbThumbs:hover{ clear:both; }
 	#pbCaption .pbThumbs ul{ display:inline-block; position:relative; list-style:none; height:80px; padding:0 5px; margin:0; white-space:pre; transition:.2s; }
